# telegram_bot_wish_list

./: .env.example  .pre-commit-config.yaml  README.md  amvera.yml  pyproject.toml  requirements.txt
app/: bot.py  config.py
