[project]
name = "telegram-bot-wish-list"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "aiogram>=3.23.0",
    "mypy>=1.19.0",
    "pip>=25.3",
    "pre-commit>=4.5.0",
    "pydantic-settings>=2.12.0",
    "ruff>=0.14.8",
]

[tool.mypy]
python_version = "3.13"
explicit_package_bases = true
disallow_subclassing_any = false
warn_unused_ignores = false
strict = true
files = ["app"]
mypy_path = ["app"]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[tool.ruff]
target-version = "py313"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D107", "D203", "D213", "COM812", "Q000", "Q003", "RUF001", "G004", "TRY401"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
